v26.01/en/_sources/interfaces.rst.txt
Interfaces

The following interfaces are provided for configuring and obtaining
data from the

rc_visard

:

Web GUI\:(Section \ref{webgui:sect-web-gui})  Easy-to-use graphical
interface to configure the rc_visard, do calibrations, view live
images, do service calls, visualize results, etc.

REST-API interface\:(Section \ref{rest_api:sect-rest-api})  API to
configure the rc_visard, query status information, do service calls,
etc.

rc_dynamics streams\:(Section \ref{rc_dynamics:sect-rc-dynamics-
interface})  Real-time streams containing state estimates with poses,
velocities, etc. are provided over the rc_dynamics interface. It sends
protobuf-encoded messages via UDP.

Generic Robot Interface\:(Section \ref{gri:sect-gri})  TCP socket
communication interface for configuring the rc_visard and for service
calls.

OPC UA interface\:(Section \ref{opc_ua:sect-opc-ua})  OPC UA interface
for configuring the rc_visard and for service calls.

KUKA Ethernet KRL Interface\:(Section \ref{eki:sect-eki})  API to
configure the rc_visard and do service calls from KUKA KSS robots.

GigE Vision 2.0/GenICam\:(Section \ref{gigevision:sect-genicam})
Images and camera related configuration.

gRPC image stream interface\:(Section \ref{grpc:sect-grpc})  Stream
synchronized image sets via gRPC.

Time synchronization\:(Section \ref{time_sync:sect-time-sync})  Time
synchronization between the rc_visard and the application host.

